--- a/packages/css/src/components/searchAction.scss
+++ b/packages/css/src/components/searchAction.scss
@@ -8,7 +8,3 @@
     }
   }
 }
-
-.searchBox div:not(:first-child) {
-  margin-left: 65px;
-}
